--- a/.gitignore
+++ b/.gitignore
@@ -43,4 +43,5 @@ amplify-gradle-config.json
 amplifytools.xcconfig
 .secret-*
 **.sample
+amplify/backend/function/**/src/**/*.js
 #amplify-do-not-edit-end
