--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "amplify:keywordForSite": "cd amplify/backend/function/keywordForSite/lib && npm install && npx tsc -p ../tsconfig.json && cp -r node_modules ../src && cd -"
+    "keywordForSite": "cd amplify/backend/function/keywordForSite/lib && npm install && npx tsc -p ../tsconfig.json && cp -r node_modules ../src && cd -"
   },
   "dependencies": {
     "@aws-amplify/ui-react": "^6.1.9",
